seaqt/QtWidgets/gen_qgraphicseffect.h

class QChildEvent;
class QEvent;
class QGraphicsEffect;
class QMetaMethod;
class QMetaObject;
class QObject;
class QPainter;
class QRectF;
class QTimerEvent;
typedef struct QBrush QBrush;
typedef struct QChildEvent QChildEvent;
typedef struct QColor QColor;
typedef struct QEvent QEvent;
typedef struct QGraphicsBlurEffect QGraphicsBlurEffect;
typedef struct QGraphicsColorizeEffect QGraphicsColorizeEffect;
typedef struct QGraphicsDropShadowEffect QGraphicsDropShadowEffect;
typedef struct QGraphicsEffect QGraphicsEffect;
typedef struct QGraphicsOpacityEffect QGraphicsOpacityEffect;
typedef struct QMetaMethod QMetaMethod;
typedef struct QMetaObject QMetaObject;
typedef struct QObject QObject;
typedef struct QPainter QPainter;
typedef struct QPixmap QPixmap;
typedef struct QPointF QPointF;
typedef struct QRectF QRectF;
typedef struct QTimerEvent QTimerEvent;
void QGraphicsEffect_connect_enabledChanged(QGraphicsEffect* self, intptr_t slot, void (*callback)(intptr_t, bool), void (*release)(intptr_t));
void QGraphicsColorizeEffect_connect_colorChanged(QGraphicsColorizeEffect* self, intptr_t slot, void (*callback)(intptr_t, QColor*), void (*release)(intptr_t));
void QGraphicsColorizeEffect_connect_strengthChanged(QGraphicsColorizeEffect* self, intptr_t slot, void (*callback)(intptr_t, double), void (*release)(intptr_t));
void QGraphicsBlurEffect_connect_blurRadiusChanged(QGraphicsBlurEffect* self, intptr_t slot, void (*callback)(intptr_t, double), void (*release)(intptr_t));
void QGraphicsBlurEffect_connect_blurHintsChanged(QGraphicsBlurEffect* self, intptr_t slot, void (*callback)(intptr_t, int), void (*release)(intptr_t));
void QGraphicsDropShadowEffect_connect_offsetChanged(QGraphicsDropShadowEffect* self, intptr_t slot, void (*callback)(intptr_t, QPointF*), void (*release)(intptr_t));
void QGraphicsDropShadowEffect_connect_blurRadiusChanged(QGraphicsDropShadowEffect* self, intptr_t slot, void (*callback)(intptr_t, double), void (*release)(intptr_t));
void QGraphicsDropShadowEffect_connect_colorChanged(QGraphicsDropShadowEffect* self, intptr_t slot, void (*callback)(intptr_t, QColor*), void (*release)(intptr_t));
struct QGraphicsOpacityEffect_VTable {
	void (*destructor)(struct QGraphicsOpacityEffect_VTable* vtbl, QGraphicsOpacityEffect* self);
	QMetaObject* (*metaObject)(struct QGraphicsOpacityEffect_VTable* vtbl, const QGraphicsOpacityEffect* self);
	void* (*metacast)(struct QGraphicsOpacityEffect_VTable* vtbl, QGraphicsOpacityEffect* self, const char* param1);
	int (*metacall)(struct QGraphicsOpacityEffect_VTable* vtbl, QGraphicsOpacityEffect* self, int param1, int param2, void** param3);
	void (*draw)(struct QGraphicsOpacityEffect_VTable* vtbl, QGraphicsOpacityEffect* self, QPainter* painter);
	QRectF* (*boundingRectFor)(struct QGraphicsOpacityEffect_VTable* vtbl, const QGraphicsOpacityEffect* self, QRectF* sourceRect);
	void (*sourceChanged)(struct QGraphicsOpacityEffect_VTable* vtbl, QGraphicsOpacityEffect* self, int flags);
	bool (*event)(struct QGraphicsOpacityEffect_VTable* vtbl, QGraphicsOpacityEffect* self, QEvent* event);
	bool (*eventFilter)(struct QGraphicsOpacityEffect_VTable* vtbl, QGraphicsOpacityEffect* self, QObject* watched, QEvent* event);
	void (*timerEvent)(struct QGraphicsOpacityEffect_VTable* vtbl, QGraphicsOpacityEffect* self, QTimerEvent* event);
	void (*childEvent)(struct QGraphicsOpacityEffect_VTable* vtbl, QGraphicsOpacityEffect* self, QChildEvent* event);
	void (*customEvent)(struct QGraphicsOpacityEffect_VTable* vtbl, QGraphicsOpacityEffect* self, QEvent* event);
	void (*connectNotify)(struct QGraphicsOpacityEffect_VTable* vtbl, QGraphicsOpacityEffect* self, QMetaMethod* signal);
	void (*disconnectNotify)(struct QGraphicsOpacityEffect_VTable* vtbl, QGraphicsOpacityEffect* self, QMetaMethod* signal);
};
QGraphicsOpacityEffect* QGraphicsOpacityEffect_new(struct QGraphicsOpacityEffect_VTable* vtbl);
QGraphicsOpacityEffect* QGraphicsOpacityEffect_new2(struct QGraphicsOpacityEffect_VTable* vtbl, QObject* parent);
void QGraphicsOpacityEffect_connect_opacityChanged(QGraphicsOpacityEffect* self, intptr_t slot, void (*callback)(intptr_t, double), void (*release)(intptr_t));
void QGraphicsOpacityEffect_connect_opacityMaskChanged(QGraphicsOpacityEffect* self, intptr_t slot, void (*callback)(intptr_t, QBrush*), void (*release)(intptr_t));
QMetaObject* QGraphicsOpacityEffect_virtualbase_metaObject(const void* self);
void* QGraphicsOpacityEffect_virtualbase_metacast(void* self, const char* param1);
int QGraphicsOpacityEffect_virtualbase_metacall(void* self, int param1, int param2, void** param3);
void QGraphicsOpacityEffect_virtualbase_draw(void* self, QPainter* painter);
QRectF* QGraphicsOpacityEffect_virtualbase_boundingRectFor(const void* self, QRectF* sourceRect);
void QGraphicsOpacityEffect_virtualbase_sourceChanged(void* self, int flags);
bool QGraphicsOpacityEffect_virtualbase_event(void* self, QEvent* event);
bool QGraphicsOpacityEffect_virtualbase_eventFilter(void* self, QObject* watched, QEvent* event);
void QGraphicsOpacityEffect_virtualbase_timerEvent(void* self, QTimerEvent* event);
void QGraphicsOpacityEffect_virtualbase_childEvent(void* self, QChildEvent* event);
void QGraphicsOpacityEffect_virtualbase_customEvent(void* self, QEvent* event);
void QGraphicsOpacityEffect_virtualbase_connectNotify(void* self, QMetaMethod* signal);
void QGraphicsOpacityEffect_virtualbase_disconnectNotify(void* self, QMetaMethod* signal);
void QGraphicsOpacityEffect_protectedbase_updateBoundingRect(void* self);
bool QGraphicsOpacityEffect_protectedbase_sourceIsPixmap(const void* self);
QRectF* QGraphicsOpacityEffect_protectedbase_sourceBoundingRect(const void* self);
void QGraphicsOpacityEffect_protectedbase_drawSource(void* self, QPainter* painter);
QPixmap* QGraphicsOpacityEffect_protectedbase_sourcePixmap(const void* self);
QObject* QGraphicsOpacityEffect_protectedbase_sender(const void* self);
int QGraphicsOpacityEffect_protectedbase_senderSignalIndex(const void* self);
int QGraphicsOpacityEffect_protectedbase_receivers(const void* self, const char* signal);
bool QGraphicsOpacityEffect_protectedbase_isSignalConnected(const void* self, QMetaMethod* signal);
const QMetaObject* QGraphicsOpacityEffect_staticMetaObject();
void QGraphicsOpacityEffect_delete(QGraphicsOpacityEffect* self);