seaqt/QtWidgets/gen_qgraphicseffect.nim

  disconnectNotify*: proc(vtbl, self: pointer, signal: pointer): void {.cdecl, raises: [], gcsafe.}
proc fcQGraphicsOpacityEffect_virtualbase_metaObject(self: pointer, ): pointer {.importc: "QGraphicsOpacityEffect_virtualbase_metaObject".}
proc fcQGraphicsOpacityEffect_virtualbase_metacast(self: pointer, param1: cstring): pointer {.importc: "QGraphicsOpacityEffect_virtualbase_metacast".}
proc fcQGraphicsOpacityEffect_virtualbase_metacall(self: pointer, param1: cint, param2: cint, param3: pointer): cint {.importc: "QGraphicsOpacityEffect_virtualbase_metacall".}
proc fcQGraphicsOpacityEffect_virtualbase_draw(self: pointer, painter: pointer): void {.importc: "QGraphicsOpacityEffect_virtualbase_draw".}
proc fcQGraphicsOpacityEffect_virtualbase_boundingRectFor(self: pointer, sourceRect: pointer): pointer {.importc: "QGraphicsOpacityEffect_virtualbase_boundingRectFor".}
proc fcQGraphicsOpacityEffect_virtualbase_sourceChanged(self: pointer, flags: cint): void {.importc: "QGraphicsOpacityEffect_virtualbase_sourceChanged".}
proc fcQGraphicsOpacityEffect_virtualbase_event(self: pointer, event: pointer): bool {.importc: "QGraphicsOpacityEffect_virtualbase_event".}
proc fcQGraphicsOpacityEffect_virtualbase_eventFilter(self: pointer, watched: pointer, event: pointer): bool {.importc: "QGraphicsOpacityEffect_virtualbase_eventFilter".}
proc fcQGraphicsOpacityEffect_virtualbase_timerEvent(self: pointer, event: pointer): void {.importc: "QGraphicsOpacityEffect_virtualbase_timerEvent".}
proc fcQGraphicsOpacityEffect_virtualbase_childEvent(self: pointer, event: pointer): void {.importc: "QGraphicsOpacityEffect_virtualbase_childEvent".}
proc fcQGraphicsOpacityEffect_virtualbase_customEvent(self: pointer, event: pointer): void {.importc: "QGraphicsOpacityEffect_virtualbase_customEvent".}
proc fcQGraphicsOpacityEffect_virtualbase_connectNotify(self: pointer, signal: pointer): void {.importc: "QGraphicsOpacityEffect_virtualbase_connectNotify".}
proc fcQGraphicsOpacityEffect_virtualbase_disconnectNotify(self: pointer, signal: pointer): void {.importc: "QGraphicsOpacityEffect_virtualbase_disconnectNotify".}
proc fcQGraphicsOpacityEffect_protectedbase_updateBoundingRect(self: pointer, ): void {.importc: "QGraphicsOpacityEffect_protectedbase_updateBoundingRect".}
proc fcQGraphicsOpacityEffect_protectedbase_sourceIsPixmap(self: pointer, ): bool {.importc: "QGraphicsOpacityEffect_protectedbase_sourceIsPixmap".}
proc fcQGraphicsOpacityEffect_protectedbase_sourceBoundingRect(self: pointer, ): pointer {.importc: "QGraphicsOpacityEffect_protectedbase_sourceBoundingRect".}
proc fcQGraphicsOpacityEffect_protectedbase_drawSource(self: pointer, painter: pointer): void {.importc: "QGraphicsOpacityEffect_protectedbase_drawSource".}
proc fcQGraphicsOpacityEffect_protectedbase_sourcePixmap(self: pointer, ): pointer {.importc: "QGraphicsOpacityEffect_protectedbase_sourcePixmap".}
proc fcQGraphicsOpacityEffect_protectedbase_sender(self: pointer, ): pointer {.importc: "QGraphicsOpacityEffect_protectedbase_sender".}
proc fcQGraphicsOpacityEffect_protectedbase_senderSignalIndex(self: pointer, ): cint {.importc: "QGraphicsOpacityEffect_protectedbase_senderSignalIndex".}
proc fcQGraphicsOpacityEffect_protectedbase_receivers(self: pointer, signal: cstring): cint {.importc: "QGraphicsOpacityEffect_protectedbase_receivers".}
proc fcQGraphicsOpacityEffect_protectedbase_isSignalConnected(self: pointer, signal: pointer): bool {.importc: "QGraphicsOpacityEffect_protectedbase_isSignalConnected".}
proc fcQGraphicsOpacityEffect_new(vtbl: pointer, ): ptr cQGraphicsOpacityEffect {.importc: "QGraphicsOpacityEffect_new".}
proc fcQGraphicsOpacityEffect_new2(vtbl: pointer, parent: pointer): ptr cQGraphicsOpacityEffect {.importc: "QGraphicsOpacityEffect_new2".}
proc fcQGraphicsOpacityEffect_staticMetaObject(): pointer {.importc: "QGraphicsOpacityEffect_staticMetaObject".}
proc fcQGraphicsOpacityEffect_delete(self: pointer) {.importc: "QGraphicsOpacityEffect_delete".}

proc metaObject*(self: gen_qgraphicseffect_types.QGraphicsEffect, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQGraphicsEffect_metaObject(self.h))

proc metacast*(self: gen_qgraphicseffect_types.QGraphicsEffect, param1: cstring): pointer =
  fcQGraphicsEffect_metacast(self.h, param1)

proc metacall*(self: gen_qgraphicseffect_types.QGraphicsEffect, param1: cint, param2: cint, param3: pointer): cint =
  fcQGraphicsEffect_metacall(self.h, cint(param1), param2, param3)

proc tr*(_: type gen_qgraphicseffect_types.QGraphicsEffect, s: cstring): string =
  let v_ms = fcQGraphicsEffect_tr(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qgraphicseffect_types.QGraphicsEffect, s: cstring): string =
  let v_ms = fcQGraphicsEffect_trUtf8(s)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc boundingRectFor*(self: gen_qgraphicseffect_types.QGraphicsEffect, sourceRect: gen_qrect_types.QRectF): gen_qrect_types.QRectF =
  gen_qrect_types.QRectF(h: fcQGraphicsEffect_boundingRectFor(self.h, sourceRect.h))

proc boundingRect*(self: gen_qgraphicseffect_types.QGraphicsEffect, ): gen_qrect_types.QRectF =
  gen_qrect_types.QRectF(h: fcQGraphicsEffect_boundingRect(self.h))

proc isEnabled*(self: gen_qgraphicseffect_types.QGraphicsEffect, ): bool =
  fcQGraphicsEffect_isEnabled(self.h)

proc setEnabled*(self: gen_qgraphicseffect_types.QGraphicsEffect, enable: bool): void =
  fcQGraphicsEffect_setEnabled(self.h, enable)

proc update*(self: gen_qgraphicseffect_types.QGraphicsEffect, ): void =
  fcQGraphicsEffect_update(self.h)

proc enabledChanged*(self: gen_qgraphicseffect_types.QGraphicsEffect, enabled: bool): void =
  fcQGraphicsEffect_enabledChanged(self.h, enabled)

type QGraphicsEffectenabledChangedSlot* = proc(enabled: bool)
proc miqt_exec_callback_cQGraphicsEffect_enabledChanged(slot: int, enabled: bool) {.cdecl.} =
  let nimfunc = cast[ptr QGraphicsEffectenabledChangedSlot](cast[pointer](slot))
  let slotval1 = enabled

  nimfunc[](slotval1)

proc miqt_exec_callback_cQGraphicsEffect_enabledChanged_release(slot: int) {.cdecl.} =
  let nimfunc = cast[ref QGraphicsEffectenabledChangedSlot](cast[pointer](slot))
  GC_unref(nimfunc)

proc onenabledChanged*(self: gen_qgraphicseffect_types.QGraphicsEffect, slot: QGraphicsEffectenabledChangedSlot) =
  var tmp = new QGraphicsEffectenabledChangedSlot
  tmp[] = slot
  GC_ref(tmp)
  fcQGraphicsEffect_connect_enabledChanged(self.h, cast[int](addr tmp[]), miqt_exec_callback_cQGraphicsEffect_enabledChanged, miqt_exec_callback_cQGraphicsEffect_enabledChanged_release)

proc tr*(_: type gen_qgraphicseffect_types.QGraphicsEffect, s: cstring, c: cstring): string =
  let v_ms = fcQGraphicsEffect_tr2(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc tr*(_: type gen_qgraphicseffect_types.QGraphicsEffect, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQGraphicsEffect_tr3(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qgraphicseffect_types.QGraphicsEffect, s: cstring, c: cstring): string =
  let v_ms = fcQGraphicsEffect_trUtf82(s, c)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

proc trUtf8*(_: type gen_qgraphicseffect_types.QGraphicsEffect, s: cstring, c: cstring, n: cint): string =
  let v_ms = fcQGraphicsEffect_trUtf83(s, c, n)
  let vx_ret = string.fromBytes(toOpenArrayByte(v_ms.data, 0, int(v_ms.len)-1))
  c_free(v_ms.data)
  vx_ret

type QGraphicsEffectmetaObjectProc* = proc(self: QGraphicsEffect): gen_qobjectdefs_types.QMetaObject {.raises: [], gcsafe.}
type QGraphicsEffectmetacastProc* = proc(self: QGraphicsEffect, param1: cstring): pointer {.raises: [], gcsafe.}
type QGraphicsEffectmetacallProc* = proc(self: QGraphicsEffect, param1: cint, param2: cint, param3: pointer): cint {.raises: [], gcsafe.}
type QGraphicsEffectboundingRectForProc* = proc(self: QGraphicsEffect, sourceRect: gen_qrect_types.QRectF): gen_qrect_types.QRectF {.raises: [], gcsafe.}
type QGraphicsEffectdrawProc* = proc(self: QGraphicsEffect, painter: gen_qpainter_types.QPainter): void {.raises: [], gcsafe.}
type QGraphicsEffectsourceChangedProc* = proc(self: QGraphicsEffect, flags: cint): void {.raises: [], gcsafe.}
type QGraphicsEffecteventProc* = proc(self: QGraphicsEffect, event: gen_qcoreevent_types.QEvent): bool {.raises: [], gcsafe.}
type QGraphicsEffecteventFilterProc* = proc(self: QGraphicsEffect, watched: gen_qobject_types.QObject, event: gen_qcoreevent_types.QEvent): bool {.raises: [], gcsafe.}
type QGraphicsEffecttimerEventProc* = proc(self: QGraphicsEffect, event: gen_qcoreevent_types.QTimerEvent): void {.raises: [], gcsafe.}
type QGraphicsEffectchildEventProc* = proc(self: QGraphicsEffect, event: gen_qcoreevent_types.QChildEvent): void {.raises: [], gcsafe.}
type QGraphicsEffectcustomEventProc* = proc(self: QGraphicsEffect, event: gen_qcoreevent_types.QEvent): void {.raises: [], gcsafe.}
type QGraphicsEffectconnectNotifyProc* = proc(self: QGraphicsEffect, signal: gen_qmetaobject_types.QMetaMethod): void {.raises: [], gcsafe.}
type QGraphicsEffectdisconnectNotifyProc* = proc(self: QGraphicsEffect, signal: gen_qmetaobject_types.QMetaMethod): void {.raises: [], gcsafe.}
type QGraphicsEffectVTable* = object
  vtbl: cQGraphicsEffectVTable
  metaObject*: QGraphicsEffectmetaObjectProc
  metacast*: QGraphicsEffectmetacastProc
  metacall*: QGraphicsEffectmetacallProc
  boundingRectFor*: QGraphicsEffectboundingRectForProc
  draw*: QGraphicsEffectdrawProc
  sourceChanged*: QGraphicsEffectsourceChangedProc
  event*: QGraphicsEffecteventProc
  eventFilter*: QGraphicsEffecteventFilterProc
  timerEvent*: QGraphicsEffecttimerEventProc
  childEvent*: QGraphicsEffectchildEventProc
  customEvent*: QGraphicsEffectcustomEventProc
  connectNotify*: QGraphicsEffectconnectNotifyProc
  disconnectNotify*: QGraphicsEffectdisconnectNotifyProc
proc QGraphicsEffectmetaObject*(self: gen_qgraphicseffect_types.QGraphicsEffect, ): gen_qobjectdefs_types.QMetaObject =
  gen_qobjectdefs_types.QMetaObject(h: fcQGraphicsEffect_virtualbase_metaObject(self.h))

proc miqt_exec_callback_cQGraphicsEffect_metaObject(vtbl: pointer, self: pointer): pointer {.cdecl.} =
  let vtbl = cast[ptr QGraphicsEffectVTable](vtbl)
  let self = QGraphicsEffect(h: self)
  var virtualReturn = vtbl[].metaObject(self)
  virtualReturn.h

proc QGraphicsEffectmetacast*(self: gen_qgraphicseffect_types.QGraphicsEffect, param1: cstring): pointer =
  fcQGraphicsEffect_virtualbase_metacast(self.h, param1)

proc miqt_exec_callback_cQGraphicsEffect_metacast(vtbl: pointer, self: pointer, param1: cstring): pointer {.cdecl.} =
  let vtbl = cast[ptr QGraphicsEffectVTable](vtbl)
  let self = QGraphicsEffect(h: self)
  let slotval1 = (param1)
  var virtualReturn = vtbl[].metacast(self, slotval1)
  virtualReturn

proc QGraphicsEffectmetacall*(self: gen_qgraphicseffect_types.QGraphicsEffect, param1: cint, param2: cint, param3: pointer): cint =
  fcQGraphicsEffect_virtualbase_metacall(self.h, cint(param1), param2, param3)

proc miqt_exec_callback_cQGraphicsEffect_metacall(vtbl: pointer, self: pointer, param1: cint, param2: cint, param3: pointer): cint {.cdecl.} =
  let vtbl = cast[ptr QGraphicsEffectVTable](vtbl)
  let self = QGraphicsEffect(h: self)
  let slotval1 = cint(param1)
  let slotval2 = param2
  let slotval3 = param3
  var virtualReturn = vtbl[].metacall(self, slotval1, slotval2, slotval3)
  virtualReturn

proc QGraphicsEffectboundingRectFor*(self: gen_qgraphicseffect_types.QGraphicsEffect, sourceRect: gen_qrect_types.QRectF): gen_qrect_types.QRectF =
  gen_qrect_types.QRectF(h: fcQGraphicsEffect_virtualbase_boundingRectFor(self.h, sourceRect.h))
